--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "project_1"
+name = "project_1_itcs_6156"
 version = "0.1.0"
 authors = ["dhruvdh <dhruv.dhamani@gmail.com>"]
 edition = "2018"
