--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Crate for Project 1 done for ITCS 6156 Intelligent Systems at UNCC."
 repository = "https://github.com/DhruvDh/project_1_itcs_6150"
 readme = "README.md"
-license = "Mozilla Public License 2.0"
+license = "MPL-2.0"
 license-file = "LICENSE"
 
 [dependencies]
