--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ license = "MPL-2.0"
 license-file = "LICENSE"
 
 [dependencies]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = [ "--release" ]
